# proteuslab-autodraw-orchestrator

./: .gitignore  CONTRIBUTING.md  GIT_COMMANDS.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python.yml
docs/: ADDING_TASKS.md  CHANGES_V0.6.1.md  EASY_USAGE_GUIDE.md  FAQ.md  PROJECT_IDENTITY.md  RELEASE_NOTES.md  SIMPLIFIED_CALIBRATION.md  TECHNICAL_WHITEPAPER.md  TROUBLESHOOTING.md  USER_GUIDE.md
scripts/: calibrate.bat  doctor.bat  launch_wizard.bat  proteus_helper.ahk  setup_windows.bat  task1_dry_run.bat  task1_interactive.bat
src/proteus_lab_assistant/: autodraw.py  calibrate.py  checklist.py  cli.py  console.py  doctor.py  engine.py  models.py  packer.py  paths.py  profile.py  safety.py  tasks.py  template_creator.py  wizard.py
src/proteus_lab_assistant/data/: tasks.json
tests/: test_safety.py  test_tasks.py
