[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "proteus-lab-automation-assistant"
version = "0.6.2"
description = "Calibration-aware GUI automation framework for Proteus ISIS schematic AutoDraw and lab submission packaging."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Yasser Idbouzkri" }]
dependencies = ["pyautogui>=0.9.54", "Pillow>=10.0.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.4.0"]

[project.scripts]
proteus-lab = "proteus_lab_assistant.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
proteus_lab_assistant = ["data/*.json"]
